--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "^2.13.1",
+    "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.4.4",
@@ -17,8 +18,10 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "date-fns": "^2.28.0",
+    "firebase": "^9.6.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^5.0.3",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
